fix: 全面加固认证授权与部署流程